
next
-------------

- improved README

- gen-qr subcommand creates a QR code with basic explanation text

- rename subcommand "add-local-user" to "add-user"
  because virtually all command line options are local-options

- rename subcommand "prune-expired" to "prune"
  because pruning is about expired accounts

- use setuptools_scm for automatic versioning

- added circle-ci config for running python tests

- allow root-less operations for account creation


0.9.0
---------------

initial release