@@ -17,9 +17,15 @@ TMP_EMAIL_CHARS = "2345789acdefghjkmnpqrstuvwxyz"
 TMP_EMAIL_LEN = 5
 
 
+class InvalidConfig(ValueError):
+    """ raised when something is invalid about the init config file. """
+
+
 class Config:
     def __init__(self, path):
+        self.path = path
         self.cfg = iniconfig.IniConfig(path)
+        self.sysconfig = self._parse_sysconfig()
 
     def get_token_config_from_name(self, name):
         for mc in self.get_token_configs():
@@ -33,21 +39,72 @@ class Config:
 
     def get_token_config_from_email(self, email):
         for mc in self.get_token_configs():
-            if email.endswith("@" + mc.mail_domain) and email.startswith(mc.prefix):
+            if email.endswith("@" + self.sysconfig.mail_domain) and email.startswith(mc.prefix):
                 return mc
 
     def get_token_configs(self):
-        for section in self.cfg:
-            if section.name.startswith("token:"):
-                yield TokenConfig(section.name[6:], dict(section.items()))
+        for section in self.cfg.sections:
+            if section.startswith("token:"):
+                kwargs = self._parse_token_section(section)
+                yield TokenConfig(self.sysconfig, **kwargs)
+
+    def _bailout(self, message):
+        raise InvalidConfig("{} in file {!r}".format(message, self.path))
+
+    def _parse_token_section(self, section):
+        assert section.startswith("token:"), section
+        kwargs = {'name': section[6:].strip()}
+
+        def error(message):
+            self._bailout("{} in section {!r}".format(message, kwargs['name']))
+
+        for name, val in self.cfg.sections[section].items():
+            if name == "expiry":
+                try:
+                    parse_expiry_code(val)
+                except ValueError:
+                    error("invalid expiry code {!r}".format(val))
+            elif name == "prefix":
+                pass
+            elif name == "token":
+                if len(val) < 15:
+                    error("token too short {!r}".format(val))
+            else:
+                error("invalid name {!r}".format(val))
+            kwargs[name] = val
+        return kwargs
+
+    def _parse_sysconfig(self):
+        data = self.cfg.sections.get("sysconfig")
+        if data is None:
+            self._bailout("no 'sysconfig' section")
+        try:
+            return SysConfig(**dict(data))
+        except TypeError as err:
+            self._bailout("invalid sysconfig: {}".format(err))
+
+
+class SysConfig:
+    def __init__(self,
+            path_mailadm_db,         # path to mailadm database (source of truth)
+            mail_domain,             # on which mail addresses are created
+            web_endpoint,            # how the web endpoint is externally visible
+            path_dovecot_users,      # path to dovecot users file
+            path_virtual_mailboxes,  # postfix virtual mailbox alias file
+            path_vmaildir,           # where dovecot virtual mail directory resides
+            dovecot_uid=1000,        # uid of the dovecot process
+            dovecot_gid=1000,):      # gid of the dovecot process
+        self.__dict__.update(locals())
+        del self.self
 
 
 class TokenConfig:
-    def __init__(self, name, dic):
+    def __init__(self, sysconfig, name, token, expiry, prefix):
+        self.sysconfig = sysconfig
         self.name = name
-        assert "expiry" in dic, dic
-        assert "prefix" in dic, dic
-        self.__dict__.update(dic)
+        self.token = token
+        self.expiry = expiry
+        self.prefix = prefix
 
     def get_maxdays(self):
         return parse_expiry_code(self.expiry) / (24 * 60 * 60)
@@ -61,7 +118,7 @@ class TokenConfig:
         elif self.prefix:
             raise ValueError("can not set username")
         assert "@" not in username
-        return "{}@{}".format(username, self.mail_domain)
+        return "{}@{}".format(username, self.sysconfig.mail_domain)
 
     def make_controller(self):
         from .mailctl import MailController
@@ -69,7 +126,7 @@ class TokenConfig:
 
     def get_web_url(self):
         return ("{web}?t={token}&n={name}".format(
-                web=self.web_endpoint, token=self.token, name=self.name))
+                web=self.sysconfig.web_endpoint, token=self.token, name=self.name))
 
     def get_qr_uri(self):
         return ("DCACCOUNT:" + self.get_web_url())
