@@ -66,7 +66,7 @@ class MailController:
             os.rename(tmp_path, path)
 
     def find_email_accounts(self, prefix=None):
-        path = str(self.mail_config.path_mailadm_db)
+        path = str(self.mail_config.sysconfig.path_mailadm_db)
         return [line for line in open(path)
                 if line.strip() and (
                     prefix is None or line.startswith(prefix))]
@@ -77,7 +77,7 @@ class MailController:
         these accounts. Note that the returned directories do not neccessarily
         exist as they are only created from the MDA when it delivers mail """
         to_remove = set(map(str.strip, account_lines))
-        with self.modify_lines(self.mail_config.path_mailadm_db) as lines:
+        with self.modify_lines(self.mail_config.sysconfig.path_mailadm_db) as lines:
             newlines = []
             for line in lines:
                 if line.strip() in to_remove:
@@ -89,7 +89,7 @@ class MailController:
         to_remove_emails = set(x.split()[0] for x in to_remove)
 
         to_remove_vmail = []
-        with self.modify_lines(self.mail_config.path_dovecot_users) as lines:
+        with self.modify_lines(self.mail_config.sysconfig.path_dovecot_users) as lines:
             newlines = []
             for line in lines:
                 email = line.split(":", 1)[0]
@@ -102,7 +102,7 @@ class MailController:
             self.log(line)
             lines.append(line)
 
-        with self.modify_lines(self.mail_config.path_virtual_mailboxes, pm=True) as lines:
+        with self.modify_lines(self.mail_config.sysconfig.path_virtual_mailboxes, pm=True) as lines:
             newlines = []
             for line in lines:
                 email = line.split(" ", 1)[0]
@@ -114,7 +114,7 @@ class MailController:
 
         to_remove_dirs = []
         for email in to_remove_vmail:
-            path = os.path.join(self.mail_config.path_vmaildir, email)
+            path = os.path.join(self.mail_config.sysconfig.path_vmaildir, email)
             to_remove_dirs.append((email, path))
         return to_remove_dirs
 
@@ -122,7 +122,7 @@ class MailController:
     def prune_expired_accounts(self, dryrun=False):
         pruned = []
 
-        with self.modify_lines(self.mail_config.path_mailadm_db) as lines:
+        with self.modify_lines(self.mail_config.sysconfig.path_mailadm_db) as lines:
             newlines = []
             for line in lines:
                 if not line.strip():
@@ -143,36 +143,39 @@ class MailController:
     @locked
     def add_email_account(self, email, password=None):
         mc = self.mail_config
-        if not email.endswith(mc.mail_domain):
-            raise ValueError("email {!r} is not on domain {!r}".format(email, mc.mail_domain))
+        mail_domain = mc.sysconfig.mail_domain
+
+        if not email.endswith(mc.sysconfig.mail_domain):
+            raise ValueError("email {!r} is not on domain {!r}".format(
+                             email, mc.sysconfig.mail_domain))
 
         now = time.time()
-        with self.modify_lines(mc.path_mailadm_db) as lines:
+        with self.modify_lines(mc.sysconfig.path_mailadm_db) as lines:
             for line in lines:
                 if line.startswith(email):
                     raise AccountExists("account {!r} already exists".format(email))
             lines.append("{email} {timestamp} {expiry} {origin}".format(
                 email=email, timestamp=now, expiry=mc.expiry, origin=mc.name
             ))
-        self.log("added {!r} to {}".format(lines[-1], mc.path_mailadm_db))
+        self.log("added {!r} to {}".format(lines[-1], mc.sysconfig.path_mailadm_db))
 
         clear_password, hash_pw = self.get_doveadm_pw(password=password)
-        with self.modify_lines(mc.path_dovecot_users) as lines:
+        with self.modify_lines(mc.sysconfig.path_dovecot_users) as lines:
             for line in lines:
                 assert not line.startswith(email), line
             line = (
-                "{email}:{hash_pw}:{mc.dovecot_uid}:{mc.dovecot_gid}::"
-                "{mc.path_vmaildir}::".format(**locals()))
+                "{email}:{hash_pw}:{mc.sysconfig.dovecot_uid}:{mc.sysconfig.dovecot_gid}::"
+                "{mc.sysconfig.path_vmaildir}::".format(**locals()))
             self.log("adding line to users")
             self.log(line)
             lines.append(line)
 
-        with self.modify_lines(mc.path_virtual_mailboxes, pm=True) as lines:
+        with self.modify_lines(mc.sysconfig.path_virtual_mailboxes, pm=True) as lines:
             for line in lines:
                 assert not line.startswith(email), line
             lines.append("{email} {email}".format(**locals()))
 
-        p = os.path.join(mc.path_vmaildir, email)
+        p = os.path.join(mc.sysconfig.path_vmaildir, email)
         self.log("vmaildir:", p)
         self.log("email:", email)
         self.log("password:", clear_password)
