@@ -6,7 +6,7 @@ import mailadm
 def test_new_user_random(make_ini_from_values, monkeypatch):
     inipath = make_ini_from_values(
         name="test123",
-        token="123123",
+        token="12312301923091023",
         prefix="tmp.",
         expiry="1w",
         mail_domain="example.org",
@@ -23,26 +23,26 @@ def test_new_user_random(make_ini_from_values, monkeypatch):
     monkeypatch.setattr(mailadm.config, "TMP_EMAIL_LEN", 1)
     monkeypatch.setattr(mailadm.config, "TMP_EMAIL_CHARS", "ab")
 
-    r = app.post('/?t=123123')
+    r = app.post('/?t=12312301923091023')
     assert r.status_code == 200
     assert r.json["email"].endswith("@example.org")
     assert r.json["password"]
     email = r.json["email"]
     assert email in ["tmp.a@example.org", "tmp.b@example.org"]
 
-    r2 = app.post('/?t=123123')
+    r2 = app.post('/?t=12312301923091023')
     assert r2.status_code == 200
     assert r2.json["email"] != email
     assert r2.json["email"] in ["tmp.a@example.org", "tmp.b@example.org"]
 
-    r3 = app.post('/?t=123123')
+    r3 = app.post('/?t=12312301923091023')
     assert r3.status_code == 410
 
 
 def test_new_user_usermod(make_ini_from_values):
     inipath = make_ini_from_values(
         name="test123",
-        token="123123",
+        token="123123123123123",
         prefix="",
         expiry="5w",
         mail_domain="example.org",
@@ -54,14 +54,14 @@ def test_new_user_usermod(make_ini_from_values):
     r = app.post('/?t=00000')
     assert r.status_code == 403
 
-    r = app.post('/?t=123123&username=hello')
+    r = app.post('/?t=123123123123123&username=hello')
     assert r.status_code == 200
 
     assert r.json["email"] == "hello@example.org"
     assert len(r.json["password"]) >= 12
 
     now = time.time()
-    r = app.post('/?t=123123&username=hello2&password=l123123123123')
+    r = app.post('/?t=123123123123123&username=hello2&password=l123123123123')
     assert r.status_code == 200
     assert r.json["email"] == "hello2@example.org"
     assert r.json["password"] == "l123123123123"
