@@ -27,7 +27,7 @@ deps =
     restructuredtext_lint
 commands =
     rst-lint README.rst CHANGELOG.rst
-    flake8 --ignore=E127,E126 --max-line-length 100 src/mailadm tests/ 
+    flake8 --ignore=E128,E127,E126 --max-line-length 100 src/mailadm tests/ 
 
 [testenv:check-manifest]
 skip_install = True
